--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html --dist-dir build",
-    "clean": "rm -rf dist/ .parcel-cache node_modules package-lock.json build"
+    "clean": "rm -rf dist/ .parcel-cache node_modules package-lock.json build",
+    "test": "jest --config jestconfig.json"
   },
   "eslintConfig": {
     "extends": [
@@ -39,14 +40,21 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react": "^7.33.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.11.0",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "ts-jest": "^29.2.6"
   }
 }
