--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
-dist/
+build/
 
 # Dependency directories
 node_modules/
